Add missing values

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5px;
 }
 
 .logo {
@@ -19,6 +20,8 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 5px;
+  padding: 0;
+  margin: 0;
 }
 
 a {
