--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -13,10 +16,14 @@
   font-family: Helvetica;
   font-weight: bold;
   color: white;
+  display: grid;
 }
 
 .header {
   background-color: #393f4d;
+  grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
 .menu ul,
@@ -25,7 +32,13 @@
 }
 
 .sidebar {
-  background-color: #C50208;
+  background-color: #c50208;
+  grid-area: 2 / 1 / 5 / 2;
+}
+
+.sidebar div {
+  display: grid;
+  place-content: center center;
 }
 
 .sidebar .photo {
@@ -36,7 +49,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -45,7 +57,7 @@
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
 }
 
 .nav ul li {
@@ -53,8 +65,15 @@
   text-transform: uppercase;
 }
 
+.nav ul {
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -65,9 +84,10 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,9 +103,35 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4 / 1 / 5 / 3;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+.menu ul,
+.nav ul,
+.sidebar {
+  display: grid;
+}
+
+.sidebar {
+  gap: 50px;
+}
+
+li {
+  list-style: none;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  place-content: center center;
+}
+
+.logo {
+  display: grid;
+  place-content: center left;
 }
